# cuda-device-query

./: Cargo.toml  LICENSE  README.md
src/: main.rs
